[package]
name = "dlopen"
version = "0.2.0"
authors = [
    "Szymon Wieloch <szymon.wieloch@gmail.com>",
    "Ahmed Masud <ahmed.masud@saf.ai>"]
description = "Library for opening and operating on dynamic link libraries (also known as shared objects or shared libraries)."
keywords = [
    #common functions
    "dlopen", "dll", "so", "dylib", "shared"]
license = "MIT"
repository = "https://github.com/ahmed-masud/rust-dlopen"
edition = "2018"

[dependencies]
lazy_static = "1.3.0"

[dependencies.dlopen_derive]
path = "rust-dlopen-derive"
version = "0.1.4"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.7", features=["winnt", "minwindef", "winerror", "libloaderapi", "errhandlingapi", "dbghelp", "processthreadsapi", "basetsd"]}

[target.'cfg(unix)'.dependencies]
libc = "0.2.62"

[dev-dependencies]
const-cstr = "0.3.0"
libc  = "0.2.62"
regex = "1.2.1"
serde = { version="1.0.99", features = ["derive"] }
serde_json = "1.0.40"


[dev-dependencies.example_dylib]
path = "rust-example-dylib"
version = "0.1.0"


[badges.travis-ci]
repository = "szymonwieloch/rust-dlopen"
branch = "master"

[badges.appveyor]
repository = "szymonwieloch/rust-dlopen"
branch = "master"

[badges.is-it-maintained-open-issues]
repository = "szymonwieloch/rust-dlopen"

[badges.codecov]
repository = "szymonwieloch/rust-dlopen"
branch = "master"
service = "github"

[[example]]
name = "raw"
crate-type = ["bin"]

[[example]]
name = "symbor"
crate-type = ["bin"]

[[example]]
name = "symbor_api"
crate-type = ["bin"]

[[example]]
name = "wrapper_api"
crate-type = ["bin"]

[[example]]
name = "raw_addr_info"
crate-type = ["bin"]

[[example]]
name = "wrapper_multi_api"
crate-type = ["bin"]
