[package]
name = "dlopen_derive"
version = "0.1.5"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>"]
edition = "2018"
repository = "https://github.com/szymonwieloch/rust-dlopen"
description = "Derive macros for the dlopen crate."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
libc = "0.2"
