[package]
name = "example_dylib"
version = "0.1.0"
authors = ["Szymon Wieloch <szymon.wieloch@gmail.com>"]
license = "MIT"
description = "Example dynamic link library for executing tests of libraries that load and operate on dynamic link libraries"

[lib]
name = "example"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
